add_executable(core_scheduler_unit_test
    unit/core/scheduler_unit_test.cpp
)
target_link_libraries(core_scheduler_unit_test PRIVATE sony_msx_core)
add_test(NAME core_scheduler_unit_test COMMAND core_scheduler_unit_test)

add_executable(core_bus_contract_unit_test
    unit/core/bus_contract_unit_test.cpp
)
target_link_libraries(core_bus_contract_unit_test PRIVATE sony_msx_core)
add_test(NAME core_bus_contract_unit_test COMMAND core_bus_contract_unit_test)

add_executable(devices_cpu_bus_client_unit_test
    unit/devices/cpu_bus_client_unit_test.cpp
)
target_link_libraries(devices_cpu_bus_client_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_cpu_bus_client_unit_test COMMAND devices_cpu_bus_client_unit_test)

add_executable(devices_cpu_io_seam_unit_test
    unit/devices/cpu_io_seam_unit_test.cpp
)
target_link_libraries(devices_cpu_io_seam_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_cpu_io_seam_unit_test COMMAND devices_cpu_io_seam_unit_test)

add_executable(devices_chipset_slot_bus_unit_test
    unit/devices/chipset_slot_bus_unit_test.cpp
)
target_link_libraries(devices_chipset_slot_bus_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_chipset_slot_bus_unit_test COMMAND devices_chipset_slot_bus_unit_test)

add_executable(devices_chipset_ppi_slot_select_unit_test
    unit/devices/chipset_ppi_slot_select_unit_test.cpp
)
target_link_libraries(devices_chipset_ppi_slot_select_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_chipset_ppi_slot_select_unit_test COMMAND devices_chipset_ppi_slot_select_unit_test)

add_executable(devices_chipset_io_bus_unit_test
    unit/devices/chipset_io_bus_unit_test.cpp
)
target_link_libraries(devices_chipset_io_bus_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_chipset_io_bus_unit_test COMMAND devices_chipset_io_bus_unit_test)

add_executable(devices_chipset_backup_ram_unit_test
    unit/devices/chipset_backup_ram_unit_test.cpp
)
target_link_libraries(devices_chipset_backup_ram_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_chipset_backup_ram_unit_test COMMAND devices_chipset_backup_ram_unit_test)

add_executable(devices_chipset_mapper_io_unit_test
    unit/devices/chipset_mapper_io_unit_test.cpp
)
target_link_libraries(devices_chipset_mapper_io_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_chipset_mapper_io_unit_test COMMAND devices_chipset_mapper_io_unit_test)

# --- M13 memory devices + asset loader --------------------------------------
# Absolute path to the repo bios/ directory so tests that need real ROM images
# (asset loader, slot map, boot checkpoint, mem parity) do not depend on cwd.
set(SONY_MSX_BIOS_DIR_ABS "${CMAKE_SOURCE_DIR}/bios")

add_executable(devices_memory_rom_device_unit_test
    unit/devices/memory_rom_device_unit_test.cpp
)
target_link_libraries(devices_memory_rom_device_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_memory_rom_device_unit_test COMMAND devices_memory_rom_device_unit_test)

add_executable(devices_memory_mapper_ram_unit_test
    unit/devices/memory_mapper_ram_unit_test.cpp
)
target_link_libraries(devices_memory_mapper_ram_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_memory_mapper_ram_unit_test COMMAND devices_memory_mapper_ram_unit_test)

add_executable(machine_rom_asset_loader_unit_test
    unit/machine/rom_asset_loader_unit_test.cpp
)
target_link_libraries(machine_rom_asset_loader_unit_test PRIVATE sony_msx_core)
target_compile_definitions(machine_rom_asset_loader_unit_test
    PRIVATE SONY_MSX_BIOS_DIR="${SONY_MSX_BIOS_DIR_ABS}")
add_test(NAME machine_rom_asset_loader_unit_test COMMAND machine_rom_asset_loader_unit_test)

add_executable(machine_hbf1xv_bios_boot_integration_test
    integration/machine/hbf1xv_bios_boot_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_bios_boot_integration_test PRIVATE sony_msx_core)
target_compile_definitions(machine_hbf1xv_bios_boot_integration_test
    PRIVATE SONY_MSX_BIOS_DIR="${SONY_MSX_BIOS_DIR_ABS}")
add_test(NAME machine_hbf1xv_bios_boot_integration_test COMMAND machine_hbf1xv_bios_boot_integration_test)

add_executable(machine_hbf1xv_m13_mem_parity_checkpoint_integration_test
    integration/machine/hbf1xv_m13_mem_parity_checkpoint_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_m13_mem_parity_checkpoint_integration_test PRIVATE sony_msx_core)
target_compile_definitions(machine_hbf1xv_m13_mem_parity_checkpoint_integration_test
    PRIVATE SONY_MSX_BIOS_DIR="${SONY_MSX_BIOS_DIR_ABS}")
add_test(NAME machine_hbf1xv_m13_mem_parity_checkpoint_integration_test
    COMMAND machine_hbf1xv_m13_mem_parity_checkpoint_integration_test)

add_executable(devices_chipset_m1_wait_unit_test
    unit/devices/chipset_m1_wait_unit_test.cpp
)
target_link_libraries(devices_chipset_m1_wait_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_chipset_m1_wait_unit_test COMMAND devices_chipset_m1_wait_unit_test)

add_executable(devices_z80a_state_unit_test
    unit/devices/z80a_state_unit_test.cpp
)
target_link_libraries(devices_z80a_state_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_z80a_state_unit_test COMMAND devices_z80a_state_unit_test)

add_executable(devices_z80a_unprefixed_unit_test
    unit/devices/z80a_unprefixed_unit_test.cpp
)
target_link_libraries(devices_z80a_unprefixed_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_z80a_unprefixed_unit_test COMMAND devices_z80a_unprefixed_unit_test)

add_executable(devices_z80a_interrupts_unit_test
    unit/devices/z80a_interrupts_unit_test.cpp
)
target_link_libraries(devices_z80a_interrupts_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_z80a_interrupts_unit_test COMMAND devices_z80a_interrupts_unit_test)

add_executable(devices_z80a_unprefixed_ops_unit_test
    unit/devices/z80a_unprefixed_ops_unit_test.cpp
)
target_link_libraries(devices_z80a_unprefixed_ops_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_z80a_unprefixed_ops_unit_test COMMAND devices_z80a_unprefixed_ops_unit_test)

add_executable(devices_z80a_cb_prefixed_unit_test
    unit/devices/z80a_cb_prefixed_unit_test.cpp
)
target_link_libraries(devices_z80a_cb_prefixed_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_z80a_cb_prefixed_unit_test COMMAND devices_z80a_cb_prefixed_unit_test)

add_executable(devices_z80a_ed_prefixed_unit_test
    unit/devices/z80a_ed_prefixed_unit_test.cpp
)
target_link_libraries(devices_z80a_ed_prefixed_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_z80a_ed_prefixed_unit_test COMMAND devices_z80a_ed_prefixed_unit_test)

add_executable(devices_z80a_indexed_unit_test
    unit/devices/z80a_indexed_unit_test.cpp
)
target_link_libraries(devices_z80a_indexed_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_z80a_indexed_unit_test COMMAND devices_z80a_indexed_unit_test)

add_executable(devices_z80a_indexed_cb_unit_test
    unit/devices/z80a_indexed_cb_unit_test.cpp
)
target_link_libraries(devices_z80a_indexed_cb_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_z80a_indexed_cb_unit_test COMMAND devices_z80a_indexed_cb_unit_test)

add_executable(devices_z80a_interrupt_modes_unit_test
    unit/devices/z80a_interrupt_modes_unit_test.cpp
)
target_link_libraries(devices_z80a_interrupt_modes_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_z80a_interrupt_modes_unit_test COMMAND devices_z80a_interrupt_modes_unit_test)

add_executable(devices_z80a_trace_export_unit_test
    unit/devices/z80a_trace_export_unit_test.cpp
)
target_link_libraries(devices_z80a_trace_export_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_z80a_trace_export_unit_test COMMAND devices_z80a_trace_export_unit_test)

add_executable(devices_z80a_wz_memptr_unit_test
    unit/devices/z80a_wz_memptr_unit_test.cpp
)
target_link_libraries(devices_z80a_wz_memptr_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_z80a_wz_memptr_unit_test COMMAND devices_z80a_wz_memptr_unit_test)

add_executable(devices_z80a_scf_ccf_q_unit_test
    unit/devices/z80a_scf_ccf_q_unit_test.cpp
)
target_link_libraries(devices_z80a_scf_ccf_q_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_z80a_scf_ccf_q_unit_test COMMAND devices_z80a_scf_ccf_q_unit_test)

add_executable(devices_z80a_nmos_interrupt_unit_test
    unit/devices/z80a_nmos_interrupt_unit_test.cpp
)
target_link_libraries(devices_z80a_nmos_interrupt_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_z80a_nmos_interrupt_unit_test COMMAND devices_z80a_nmos_interrupt_unit_test)

add_executable(devices_z80a_parity_undocumented_unit_test
    unit/devices/z80a_parity_undocumented_unit_test.cpp
)
target_link_libraries(devices_z80a_parity_undocumented_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_z80a_parity_undocumented_unit_test COMMAND devices_z80a_parity_undocumented_unit_test)

add_executable(devices_z80a_block_flags_unit_test
    unit/devices/z80a_block_flags_unit_test.cpp
)
target_link_libraries(devices_z80a_block_flags_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_z80a_block_flags_unit_test COMMAND devices_z80a_block_flags_unit_test)

add_executable(devices_z80a_16bit_daa_unit_test
    unit/devices/z80a_16bit_daa_unit_test.cpp
)
target_link_libraries(devices_z80a_16bit_daa_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_z80a_16bit_daa_unit_test COMMAND devices_z80a_16bit_daa_unit_test)

add_executable(machine_hbf1xv_memory_regions_unit_test
    unit/machine/hbf1xv_memory_regions_unit_test.cpp
)
target_link_libraries(machine_hbf1xv_memory_regions_unit_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_memory_regions_unit_test COMMAND machine_hbf1xv_memory_regions_unit_test)

add_executable(machine_hbf1xv_slot_map_unit_test
    unit/machine/hbf1xv_slot_map_unit_test.cpp
)
target_link_libraries(machine_hbf1xv_slot_map_unit_test PRIVATE sony_msx_core)
target_compile_definitions(machine_hbf1xv_slot_map_unit_test
    PRIVATE SONY_MSX_BIOS_DIR="${SONY_MSX_BIOS_DIR_ABS}")
add_test(NAME machine_hbf1xv_slot_map_unit_test COMMAND machine_hbf1xv_slot_map_unit_test)

add_executable(machine_hbf1xv_debug_dump_unit_test
    unit/machine/hbf1xv_debug_dump_unit_test.cpp
)
target_link_libraries(machine_hbf1xv_debug_dump_unit_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_debug_dump_unit_test COMMAND machine_hbf1xv_debug_dump_unit_test)

add_executable(machine_hbf1xv_machine_integration_test
    integration/machine/hbf1xv_machine_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_machine_integration_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_machine_integration_test COMMAND machine_hbf1xv_machine_integration_test)

add_executable(machine_hbf1xv_debug_event_log_integration_test
    integration/machine/hbf1xv_debug_event_log_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_debug_event_log_integration_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_debug_event_log_integration_test COMMAND machine_hbf1xv_debug_event_log_integration_test)

add_executable(machine_hbf1xv_memory_regions_integration_test
    integration/machine/hbf1xv_memory_regions_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_memory_regions_integration_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_memory_regions_integration_test COMMAND machine_hbf1xv_memory_regions_integration_test)

add_executable(machine_hbf1xv_system_bus_integration_test
    integration/machine/hbf1xv_system_bus_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_system_bus_integration_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_system_bus_integration_test COMMAND machine_hbf1xv_system_bus_integration_test)

add_executable(machine_hbf1xv_cpu_step_integration_test
    integration/machine/hbf1xv_cpu_step_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_cpu_step_integration_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_cpu_step_integration_test COMMAND machine_hbf1xv_cpu_step_integration_test)

add_executable(machine_hbf1xv_trace_program_integration_test
    integration/machine/hbf1xv_trace_program_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_trace_program_integration_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_trace_program_integration_test COMMAND machine_hbf1xv_trace_program_integration_test)

add_executable(machine_hbf1xv_cb_program_integration_test
    integration/machine/hbf1xv_cb_program_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_cb_program_integration_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_cb_program_integration_test COMMAND machine_hbf1xv_cb_program_integration_test)

add_executable(machine_hbf1xv_ldir_program_integration_test
    integration/machine/hbf1xv_ldir_program_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_ldir_program_integration_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_ldir_program_integration_test COMMAND machine_hbf1xv_ldir_program_integration_test)

add_executable(machine_hbf1xv_indexed_program_integration_test
    integration/machine/hbf1xv_indexed_program_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_indexed_program_integration_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_indexed_program_integration_test COMMAND machine_hbf1xv_indexed_program_integration_test)

add_executable(machine_hbf1xv_interrupt_ack_integration_test
    integration/machine/hbf1xv_interrupt_ack_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_interrupt_ack_integration_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_interrupt_ack_integration_test COMMAND machine_hbf1xv_interrupt_ack_integration_test)

add_executable(machine_hbf1xv_cpu_parity_integration_test
    integration/machine/hbf1xv_cpu_parity_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_cpu_parity_integration_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_cpu_parity_integration_test COMMAND machine_hbf1xv_cpu_parity_integration_test)

add_executable(machine_hbf1xv_m11_parity_checkpoint_integration_test
    integration/machine/hbf1xv_m11_parity_checkpoint_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_m11_parity_checkpoint_integration_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_m11_parity_checkpoint_integration_test COMMAND machine_hbf1xv_m11_parity_checkpoint_integration_test)

add_executable(machine_hbf1xv_parity_checkpoint_integration_test
    integration/machine/hbf1xv_parity_checkpoint_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_parity_checkpoint_integration_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_parity_checkpoint_integration_test COMMAND machine_hbf1xv_parity_checkpoint_integration_test)

add_executable(devices_cpu_bus_contract_integration_test
    integration/devices/cpu_bus_contract_integration_test.cpp
)
target_link_libraries(devices_cpu_bus_contract_integration_test PRIVATE sony_msx_core)
add_test(NAME devices_cpu_bus_contract_integration_test COMMAND devices_cpu_bus_contract_integration_test)

add_executable(boot_system_test
    system/boot_system_test.cpp
)
target_link_libraries(boot_system_test PRIVATE sony_msx_core)
add_test(NAME boot_system_test COMMAND boot_system_test)

add_executable(cpu_bootstrap_im1_system_test
    system/cpu_bootstrap_im1_system_test.cpp
)
target_link_libraries(cpu_bootstrap_im1_system_test PRIVATE sony_msx_core)
add_test(NAME cpu_bootstrap_im1_system_test COMMAND cpu_bootstrap_im1_system_test)

# --- M14 V9958 VDP (register/VRAM/status/interrupt contract) -----------------
add_executable(devices_vdp_vram_unit_test
    unit/devices/video_vdp_vram_unit_test.cpp
)
target_link_libraries(devices_vdp_vram_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_vdp_vram_unit_test COMMAND devices_vdp_vram_unit_test)

add_executable(devices_v9958_ports_unit_test
    unit/devices/video_v9958_ports_unit_test.cpp
)
target_link_libraries(devices_v9958_ports_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_v9958_ports_unit_test COMMAND devices_v9958_ports_unit_test)

add_executable(devices_v9958_registers_unit_test
    unit/devices/video_v9958_registers_unit_test.cpp
)
target_link_libraries(devices_v9958_registers_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_v9958_registers_unit_test COMMAND devices_v9958_registers_unit_test)

add_executable(devices_v9958_palette_mode_unit_test
    unit/devices/video_v9958_palette_mode_unit_test.cpp
)
target_link_libraries(devices_v9958_palette_mode_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_v9958_palette_mode_unit_test COMMAND devices_v9958_palette_mode_unit_test)

add_executable(devices_v9958_status_irq_unit_test
    unit/devices/video_v9958_status_irq_unit_test.cpp
)
target_link_libraries(devices_v9958_status_irq_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_v9958_status_irq_unit_test COMMAND devices_v9958_status_irq_unit_test)

add_executable(machine_hbf1xv_vdp_io_integration_test
    integration/machine/hbf1xv_vdp_io_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_vdp_io_integration_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_vdp_io_integration_test COMMAND machine_hbf1xv_vdp_io_integration_test)

# --- M15 device integration (PSG/RTC/PPI+keyboard/joystick/backup-RAM) --------
add_executable(devices_audio_psg_ym2149_unit_test
    unit/devices/audio_psg_ym2149_unit_test.cpp
)
target_link_libraries(devices_audio_psg_ym2149_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_audio_psg_ym2149_unit_test COMMAND devices_audio_psg_ym2149_unit_test)

add_executable(peripherals_joystick_unit_test
    unit/peripherals/joystick_unit_test.cpp
)
target_link_libraries(peripherals_joystick_unit_test PRIVATE sony_msx_core)
add_test(NAME peripherals_joystick_unit_test COMMAND peripherals_joystick_unit_test)

add_executable(peripherals_keyboard_matrix_unit_test
    unit/peripherals/keyboard_matrix_unit_test.cpp
)
target_link_libraries(peripherals_keyboard_matrix_unit_test PRIVATE sony_msx_core)
add_test(NAME peripherals_keyboard_matrix_unit_test COMMAND peripherals_keyboard_matrix_unit_test)

add_executable(devices_rtc_rp5c01_unit_test
    unit/devices/rtc_rp5c01_unit_test.cpp
)
target_link_libraries(devices_rtc_rp5c01_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_rtc_rp5c01_unit_test COMMAND devices_rtc_rp5c01_unit_test)

add_executable(devices_chipset_ppi_8255_unit_test
    unit/devices/chipset_ppi_8255_unit_test.cpp
)
target_link_libraries(devices_chipset_ppi_8255_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_chipset_ppi_8255_unit_test COMMAND devices_chipset_ppi_8255_unit_test)

add_executable(devices_chipset_backup_ram_sram_unit_test
    unit/devices/chipset_backup_ram_sram_unit_test.cpp
)
target_link_libraries(devices_chipset_backup_ram_sram_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_chipset_backup_ram_sram_unit_test COMMAND devices_chipset_backup_ram_sram_unit_test)

add_executable(machine_hbf1xv_m15_devices_integration_test
    integration/machine/hbf1xv_m15_devices_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_m15_devices_integration_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_m15_devices_integration_test
    COMMAND machine_hbf1xv_m15_devices_integration_test)

add_executable(machine_hbf1xv_m15_boot_checkpoint_integration_test
    integration/machine/hbf1xv_m15_boot_checkpoint_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_m15_boot_checkpoint_integration_test PRIVATE sony_msx_core)
target_compile_definitions(machine_hbf1xv_m15_boot_checkpoint_integration_test
    PRIVATE SONY_MSX_BIOS_DIR="${SONY_MSX_BIOS_DIR_ABS}")
add_test(NAME machine_hbf1xv_m15_boot_checkpoint_integration_test
    COMMAND machine_hbf1xv_m15_boot_checkpoint_integration_test)

# --- M16 FDC (Fujitsu MB89311 / WD2793, Sony connection style) ---------------
add_executable(devices_fdc_disk_image_unit_test
    unit/devices/fdc/disk_image_unit_test.cpp
)
target_link_libraries(devices_fdc_disk_image_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_fdc_disk_image_unit_test COMMAND devices_fdc_disk_image_unit_test)

add_executable(devices_fdc_wd2793_type1_unit_test
    unit/devices/fdc/wd2793_type1_unit_test.cpp
)
target_link_libraries(devices_fdc_wd2793_type1_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_fdc_wd2793_type1_unit_test COMMAND devices_fdc_wd2793_type1_unit_test)

add_executable(devices_fdc_wd2793_type2_unit_test
    unit/devices/fdc/wd2793_type2_unit_test.cpp
)
target_link_libraries(devices_fdc_wd2793_type2_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_fdc_wd2793_type2_unit_test COMMAND devices_fdc_wd2793_type2_unit_test)

add_executable(devices_fdc_wd2793_type3_unit_test
    unit/devices/fdc/wd2793_type3_unit_test.cpp
)
target_link_libraries(devices_fdc_wd2793_type3_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_fdc_wd2793_type3_unit_test COMMAND devices_fdc_wd2793_type3_unit_test)

add_executable(devices_fdc_wd2793_type4_unit_test
    unit/devices/fdc/wd2793_type4_unit_test.cpp
)
target_link_libraries(devices_fdc_wd2793_type4_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_fdc_wd2793_type4_unit_test COMMAND devices_fdc_wd2793_type4_unit_test)

add_executable(devices_fdc_sony_fdc_unit_test
    unit/devices/fdc/sony_fdc_unit_test.cpp
)
target_link_libraries(devices_fdc_sony_fdc_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_fdc_sony_fdc_unit_test COMMAND devices_fdc_sony_fdc_unit_test)

add_executable(machine_hbf1xv_m16_fdc_integration_test
    integration/machine/hbf1xv_m16_fdc_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_m16_fdc_integration_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_m16_fdc_integration_test COMMAND machine_hbf1xv_m16_fdc_integration_test)

add_executable(machine_hbf1xv_m16_boot_checkpoint_integration_test
    integration/machine/hbf1xv_m16_boot_checkpoint_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_m16_boot_checkpoint_integration_test PRIVATE sony_msx_core)
target_compile_definitions(machine_hbf1xv_m16_boot_checkpoint_integration_test
    PRIVATE SONY_MSX_BIOS_DIR="${SONY_MSX_BIOS_DIR_ABS}")
add_test(NAME machine_hbf1xv_m16_boot_checkpoint_integration_test
    COMMAND machine_hbf1xv_m16_boot_checkpoint_integration_test)

# --- M17 YM2413 (OPLL) register-accurate device + battery-backed SRAM primitive ---
add_executable(devices_audio_ym2413_opll_unit_test
    unit/devices/audio_ym2413_opll_unit_test.cpp
)
target_link_libraries(devices_audio_ym2413_opll_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_audio_ym2413_opll_unit_test COMMAND devices_audio_ym2413_opll_unit_test)

add_executable(devices_memory_battery_backed_sram_unit_test
    unit/devices/memory_battery_backed_sram_unit_test.cpp
)
target_link_libraries(devices_memory_battery_backed_sram_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_memory_battery_backed_sram_unit_test COMMAND devices_memory_battery_backed_sram_unit_test)

add_executable(machine_hbf1xv_m17_ym2413_integration_test
    integration/machine/hbf1xv_m17_ym2413_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_m17_ym2413_integration_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_m17_ym2413_integration_test COMMAND machine_hbf1xv_m17_ym2413_integration_test)

# --- M18 peripheral I/O: Kanji-font ROM (#D8-#DB) + printer (#90-#97) + cassette ---
add_executable(devices_kanji_font_rom_unit_test
    unit/devices/kanji/kanji_font_rom_unit_test.cpp
)
target_link_libraries(devices_kanji_font_rom_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_kanji_font_rom_unit_test COMMAND devices_kanji_font_rom_unit_test)

add_executable(peripherals_printer_port_unit_test
    unit/peripherals/printer_port_unit_test.cpp
)
target_link_libraries(peripherals_printer_port_unit_test PRIVATE sony_msx_core)
add_test(NAME peripherals_printer_port_unit_test COMMAND peripherals_printer_port_unit_test)

add_executable(peripherals_cassette_interface_unit_test
    unit/peripherals/cassette_interface_unit_test.cpp
)
target_link_libraries(peripherals_cassette_interface_unit_test PRIVATE sony_msx_core)
add_test(NAME peripherals_cassette_interface_unit_test COMMAND peripherals_cassette_interface_unit_test)

add_executable(machine_hbf1xv_m18_peripheral_io_integration_test
    integration/machine/hbf1xv_m18_peripheral_io_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_m18_peripheral_io_integration_test PRIVATE sony_msx_core)
target_compile_definitions(machine_hbf1xv_m18_peripheral_io_integration_test
    PRIVATE SONY_MSX_BIOS_DIR="${SONY_MSX_BIOS_DIR_ABS}")
add_test(NAME machine_hbf1xv_m18_peripheral_io_integration_test
    COMMAND machine_hbf1xv_m18_peripheral_io_integration_test)

# --- M19 external cartridge slots 1/2 (RomBlocks/RomPlain/RomGeneric8kB/16kB/
#     RomAscii8kB/16kB/RomKonami MVP family, no SCC) -----------------------
add_executable(devices_cartridge_rom_window_unit_test
    unit/devices/cartridge/cartridge_rom_window_unit_test.cpp
)
target_link_libraries(devices_cartridge_rom_window_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_cartridge_rom_window_unit_test COMMAND devices_cartridge_rom_window_unit_test)

add_executable(devices_cartridge_mapper_type_unit_test
    unit/devices/cartridge/cartridge_mapper_type_unit_test.cpp
)
target_link_libraries(devices_cartridge_mapper_type_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_cartridge_mapper_type_unit_test COMMAND devices_cartridge_mapper_type_unit_test)

add_executable(devices_cartridge_mirrored_rom_unit_test
    unit/devices/cartridge/cartridge_mirrored_rom_unit_test.cpp
)
target_link_libraries(devices_cartridge_mirrored_rom_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_cartridge_mirrored_rom_unit_test COMMAND devices_cartridge_mirrored_rom_unit_test)

add_executable(devices_cartridge_generic8kb_rom_unit_test
    unit/devices/cartridge/cartridge_generic8kb_rom_unit_test.cpp
)
target_link_libraries(devices_cartridge_generic8kb_rom_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_cartridge_generic8kb_rom_unit_test COMMAND devices_cartridge_generic8kb_rom_unit_test)

add_executable(devices_cartridge_generic16kb_rom_unit_test
    unit/devices/cartridge/cartridge_generic16kb_rom_unit_test.cpp
)
target_link_libraries(devices_cartridge_generic16kb_rom_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_cartridge_generic16kb_rom_unit_test COMMAND devices_cartridge_generic16kb_rom_unit_test)

add_executable(devices_cartridge_ascii8kb_rom_unit_test
    unit/devices/cartridge/cartridge_ascii8kb_rom_unit_test.cpp
)
target_link_libraries(devices_cartridge_ascii8kb_rom_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_cartridge_ascii8kb_rom_unit_test COMMAND devices_cartridge_ascii8kb_rom_unit_test)

add_executable(devices_cartridge_ascii16kb_rom_unit_test
    unit/devices/cartridge/cartridge_ascii16kb_rom_unit_test.cpp
)
target_link_libraries(devices_cartridge_ascii16kb_rom_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_cartridge_ascii16kb_rom_unit_test COMMAND devices_cartridge_ascii16kb_rom_unit_test)

add_executable(devices_cartridge_konami_rom_unit_test
    unit/devices/cartridge/cartridge_konami_rom_unit_test.cpp
)
target_link_libraries(devices_cartridge_konami_rom_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_cartridge_konami_rom_unit_test COMMAND devices_cartridge_konami_rom_unit_test)

add_executable(devices_cartridge_slot_unit_test
    unit/devices/cartridge/cartridge_slot_unit_test.cpp
)
target_link_libraries(devices_cartridge_slot_unit_test PRIVATE sony_msx_core)
add_test(NAME devices_cartridge_slot_unit_test COMMAND devices_cartridge_slot_unit_test)

add_executable(machine_cartridge_cli_unit_test
    unit/machine/cartridge_cli_unit_test.cpp
)
target_link_libraries(machine_cartridge_cli_unit_test PRIVATE sony_msx_core)
add_test(NAME machine_cartridge_cli_unit_test COMMAND machine_cartridge_cli_unit_test)

add_executable(machine_hbf1xv_m19_cartridge_integration_test
    integration/machine/hbf1xv_m19_cartridge_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_m19_cartridge_integration_test PRIVATE sony_msx_core)
add_test(NAME machine_hbf1xv_m19_cartridge_integration_test
    COMMAND machine_hbf1xv_m19_cartridge_integration_test)

set(SONY_MSX_ROMS_DIR_ABS "${CMAKE_SOURCE_DIR}/roms")

add_executable(machine_hbf1xv_m19_aleste_smoke_integration_test
    integration/machine/hbf1xv_m19_aleste_smoke_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_m19_aleste_smoke_integration_test PRIVATE sony_msx_core)
target_compile_definitions(machine_hbf1xv_m19_aleste_smoke_integration_test
    PRIVATE SONY_MSX_ROMS_DIR="${SONY_MSX_ROMS_DIR_ABS}")
add_test(NAME machine_hbf1xv_m19_aleste_smoke_integration_test
    COMMAND machine_hbf1xv_m19_aleste_smoke_integration_test)

add_executable(machine_hbf1xv_m19_metalgear_smoke_integration_test
    integration/machine/hbf1xv_m19_metalgear_smoke_integration_test.cpp
)
target_link_libraries(machine_hbf1xv_m19_metalgear_smoke_integration_test PRIVATE sony_msx_core)
target_compile_definitions(machine_hbf1xv_m19_metalgear_smoke_integration_test
    PRIVATE SONY_MSX_ROMS_DIR="${SONY_MSX_ROMS_DIR_ABS}")
add_test(NAME machine_hbf1xv_m19_metalgear_smoke_integration_test
    COMMAND machine_hbf1xv_m19_metalgear_smoke_integration_test)
